--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,7 @@ li.nav-item.nav-small-cap a {
   font-size: 14px;
 }
 
+li.nav-item.nav-small-cap form button,
 li.nav-item.nav-small-cap a span {
   font-size: 14px;
   margin-left: 9px;
